--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 # Core Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic-settings==2.10.1
+pydantic>=2.7.0
+pydantic-settings>=2.10.1
 python-multipart==0.0.6
 
 # Deep Learning & AI
-tensorflow==2.15.0
+torch>=2.0.0
+torchvision>=0.15.0
+torchxrayvision>=0.0.0
 transformers==4.36.0
 huggingface-hub==0.19.4
 
@@ -17,14 +19,14 @@ pydicom==2.4.3
 scikit-image==0.22.0
 
 # Data Processing
-numpy==1.24.3
-pandas==2.1.4
+numpy>=1.24.0
+pandas>=2.1.0
 
 # Web & API
-python-dotenv==1.0.0
-aiofiles==23.2.1
+python-dotenv>=1.0.0
+aiofiles>=23.2.0
 
 # Utilities
-requests==2.31.0
-tqdm==4.66.1
-loguru==0.7.2 
+requests>=2.31.0
+tqdm>=4.66.0
+loguru>=0.7.0 
